[gd_scene load_steps=82 format=3 uid="uid://cc8wav40o0jst"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_edqt5"]
[ext_resource type="Texture2D" uid="uid://vopundayk7on" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Idle/particles - Copy.png" id="2_sotpr"]
[ext_resource type="Texture2D" uid="uid://bdwt5spr5w1gq" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Dead/Dead-Sheet.png" id="3_3wc0a"]
[ext_resource type="Texture2D" uid="uid://c35w5md5fv66x" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Idle/Idle-Sheet.png" id="3_ob3vl"]
[ext_resource type="Texture2D" uid="uid://27xiraop08wp" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Jumlp-All/Jump-All-Sheet.png" id="4_1gdc1"]
[ext_resource type="Shader" path="res://Player/normal maping.gdshader" id="4_lkbe3"]
[ext_resource type="Texture2D" uid="uid://bw8pgxf45fbfb" path="res://Texture/My char/atk mc.png" id="6_4e7st"]
[ext_resource type="Texture2D" uid="uid://bnqa25bn7phvf" path="res://Texture/My char/idle mc.png" id="8_yvp27"]
[ext_resource type="Texture2D" uid="uid://dnrknge0b4rae" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Idle/and_now_its_time_too_pay.png" id="9_35283"]
[ext_resource type="AudioStream" uid="uid://bt8koa3cxnh1m" path="res://Audio/short-whoosh1.mp3" id="9_h86cq"]
[ext_resource type="Texture2D" uid="uid://bg6tw4bl5pwmg" path="res://Texture/My char/jump mc.png" id="10_2gasa"]
[ext_resource type="Texture2D" uid="uid://bwshwaqbbn44v" path="res://Texture/Legacy-Fantasy - High Forest 2.0/Legacy-Fantasy - High Forest 2.3/Character/Idle/particles.png" id="10_ce5pd"]
[ext_resource type="AudioStream" uid="uid://cbs1ukvnsuuu2" path="res://Audio/short-whoosh2.mp3" id="10_k0w7f"]
[ext_resource type="AudioStream" uid="uid://dmcedi2p0u830" path="res://Audio/short-whoosh4.mp3" id="11_qleyj"]
[ext_resource type="AudioStream" uid="uid://mn4aeoc76eyo" path="res://Audio/short-whoosh5.mp3" id="12_bhlco"]
[ext_resource type="Texture2D" uid="uid://dw7j4ytry5r1d" path="res://Texture/My char/run mc.png" id="12_ebdrv"]
[ext_resource type="AudioStream" uid="uid://60rpmqlnc006" path="res://Audio/short-whoosh6.mp3" id="13_hon66"]
[ext_resource type="Texture2D" uid="uid://c5vh71yhu2vnw" path="res://Player/light.tres" id="18_aflt6"]

[sub_resource type="Curve" id="Curve_p3cfg"]
min_value = -200.0
max_value = 200.0
bake_resolution = 1000
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.981203, -178.947), -1043.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_btdcg"]
curve = SubResource("Curve_p3cfg")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ukh14"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 0.01
gravity = Vector3(0, -183.21, 0)
radial_accel_max = 133.75
radial_accel_curve = SubResource("CurveTexture_btdcg")
tangential_accel_min = -21.8
tangential_accel_max = 16.3
damping_max = 30.675
scale_max = 1.8

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qv0wt"]
height = 46.4287

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgvyn"]
size = Vector2(23.5907, 61)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_77mt2"]
height = 46.0

[sub_resource type="CanvasTexture" id="CanvasTexture_6vsnv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sqeqn"]
shader = ExtResource("4_lkbe3")
shader_parameter/normal_map = SubResource("CanvasTexture_6vsnv")

[sub_resource type="AtlasTexture" id="AtlasTexture_468nk"]
atlas = ExtResource("3_ob3vl")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs1wc"]
atlas = ExtResource("6_4e7st")
region = Rect2(0, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_onj72"]
atlas = ExtResource("6_4e7st")
region = Rect2(82, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp1o7"]
atlas = ExtResource("6_4e7st")
region = Rect2(164, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ahvg"]
atlas = ExtResource("6_4e7st")
region = Rect2(246, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsgf1"]
atlas = ExtResource("6_4e7st")
region = Rect2(328, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjy87"]
atlas = ExtResource("6_4e7st")
region = Rect2(410, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg6w4"]
atlas = ExtResource("6_4e7st")
region = Rect2(492, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h8kq"]
atlas = ExtResource("3_3wc0a")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg1ei"]
atlas = ExtResource("3_3wc0a")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_goynm"]
atlas = ExtResource("3_3wc0a")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a8vd"]
atlas = ExtResource("3_3wc0a")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e25hg"]
atlas = ExtResource("3_3wc0a")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs5g0"]
atlas = ExtResource("3_3wc0a")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jbwc"]
atlas = ExtResource("3_3wc0a")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kvtd"]
atlas = ExtResource("3_3wc0a")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2vai"]
atlas = ExtResource("8_yvp27")
region = Rect2(0, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_icgum"]
atlas = ExtResource("8_yvp27")
region = Rect2(82, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnm48"]
atlas = ExtResource("8_yvp27")
region = Rect2(164, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_c87ty"]
atlas = ExtResource("8_yvp27")
region = Rect2(246, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsx37"]
atlas = ExtResource("8_yvp27")
region = Rect2(328, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2qds"]
atlas = ExtResource("8_yvp27")
region = Rect2(410, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_kstgu"]
atlas = ExtResource("8_yvp27")
region = Rect2(492, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_inc6i"]
atlas = ExtResource("8_yvp27")
region = Rect2(574, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y8j6"]
atlas = ExtResource("4_1gdc1")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuh11"]
atlas = ExtResource("4_1gdc1")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkdji"]
atlas = ExtResource("4_1gdc1")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaxfr"]
atlas = ExtResource("4_1gdc1")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khgb0"]
atlas = ExtResource("4_1gdc1")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7l4et"]
atlas = ExtResource("4_1gdc1")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4gay"]
atlas = ExtResource("4_1gdc1")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fosei"]
atlas = ExtResource("4_1gdc1")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7p2f"]
atlas = ExtResource("10_2gasa")
region = Rect2(492, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2irr"]
atlas = ExtResource("10_2gasa")
region = Rect2(574, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac7c4"]
atlas = ExtResource("10_2gasa")
region = Rect2(656, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gmvk"]
atlas = ExtResource("10_2gasa")
region = Rect2(0, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf270"]
atlas = ExtResource("10_2gasa")
region = Rect2(82, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxgty"]
atlas = ExtResource("10_2gasa")
region = Rect2(164, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiaox"]
atlas = ExtResource("10_2gasa")
region = Rect2(246, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qr3q"]
atlas = ExtResource("10_2gasa")
region = Rect2(328, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0mal"]
atlas = ExtResource("10_2gasa")
region = Rect2(410, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_35ut1"]
atlas = ExtResource("10_2gasa")
region = Rect2(492, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_i28u6"]
atlas = ExtResource("12_ebdrv")
region = Rect2(0, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbiix"]
atlas = ExtResource("12_ebdrv")
region = Rect2(82, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfurj"]
atlas = ExtResource("12_ebdrv")
region = Rect2(164, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3pbt"]
atlas = ExtResource("12_ebdrv")
region = Rect2(246, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4bue"]
atlas = ExtResource("12_ebdrv")
region = Rect2(328, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rp5o"]
atlas = ExtResource("12_ebdrv")
region = Rect2(410, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_44wk0"]
atlas = ExtResource("12_ebdrv")
region = Rect2(492, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wst4"]
atlas = ExtResource("12_ebdrv")
region = Rect2(574, 0, 82, 82)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb06a"]
atlas = ExtResource("9_35283")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbtmf"]
atlas = ExtResource("9_35283")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_smtqe"]
atlas = ExtResource("9_35283")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_345kj"]
atlas = ExtResource("9_35283")
region = Rect2(192, 0, 64, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_re207"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_468nk")
}],
"loop": true,
"name": &"aa",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs1wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onj72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp1o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ahvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsgf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjy87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg6w4")
}],
"loop": false,
"name": &"atk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h8kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg1ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goynm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a8vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e25hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs5g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jbwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kvtd")
}],
"loop": false,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2vai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icgum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnm48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c87ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsx37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2qds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kstgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inc6i")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y8j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuh11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkdji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaxfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khgb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7l4et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4gay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fosei")
}],
"loop": false,
"name": &"jump_air",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_x7p2f")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_e2irr")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_ac7c4")
}],
"loop": false,
"name": &"jump_end",
"speed": 10.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_1gmvk")
}, {
"duration": 0.2,
"texture": SubResource("AtlasTexture_sf270")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_nxgty")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_eiaox")
}, {
"duration": 0.5,
"texture": SubResource("AtlasTexture_0qr3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0mal")
}, {
"duration": 1.2,
"texture": SubResource("AtlasTexture_35ut1")
}],
"loop": false,
"name": &"jump_start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i28u6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbiix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfurj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3pbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4bue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rp5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44wk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wst4")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb06a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbtmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smtqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_345kj")
}],
"loop": true,
"name": &"super",
"speed": 15.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 78
script = ExtResource("1_edqt5")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
visible = false
z_index = -65
position = Vector2(-16, -24)
process_material = SubResource("ParticleProcessMaterial_ukh14")
texture = ExtResource("2_sotpr")
lifetime = 1.9
preprocess = 1.0
explosiveness = 0.07
randomness = 0.07
fixed_fps = 1000

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
z_index = -65
position = Vector2(-8, -12)
process_material = SubResource("ParticleProcessMaterial_ukh14")
texture = ExtResource("10_ce5pd")
lifetime = 1.9
preprocess = 1.0
explosiveness = 0.07
randomness = 0.07
fixed_fps = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qv0wt")
debug_color = Color(0, 0.588235, 0.772549, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.125
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="attack" type="Area2D" parent="."]
position = Vector2(2.6027, -1.47027)
disable_mode = 1
collision_layer = 4
collision_mask = 16

[node name="sword" type="CollisionShape2D" parent="attack"]
position = Vector2(24.7954, -8)
shape = SubResource("RectangleShape2D_kgvyn")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Fireball_pos" type="Node2D" parent="."]
position = Vector2(-31.3973, 9.52973)

[node name="Marker2D" type="Marker2D" parent="Fireball_pos"]
position = Vector2(44, -1)

[node name="Marker2D2" type="Marker2D" parent="Fireball_pos"]
position = Vector2(44, -3)

[node name="Marker2D3" type="Marker2D" parent="Fireball_pos"]
position = Vector2(44, -2)

[node name="Fireball_pos2" type="Node2D" parent="."]
position = Vector2(-31.3973, 9.52973)

[node name="Marker2D" type="Marker2D" parent="Fireball_pos2"]
position = Vector2(44, -1)

[node name="Marker2D2" type="Marker2D" parent="Fireball_pos2"]
position = Vector2(44, -3)

[node name="Marker2D3" type="Marker2D" parent="Fireball_pos2"]
position = Vector2(44, -2)

[node name="Fireball_cd" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Bluefb_cd" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Timer5" type="Timer" parent="."]
wait_time = 0.1

[node name="Timer6" type="Timer" parent="."]
wait_time = 0.1

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(18.6027, 2.52973)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(13.6027, 11.5297)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("9_h86cq")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("10_k0w7f")

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("10_k0w7f")

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("11_qleyj")

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("12_bhlco")

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("13_hon66")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_77mt2")

[node name="Jump" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 10.0
offset_top = -28.0
offset_right = 50.0
offset_bottom = -5.0
scale = Vector2(0.03552, 0.03552)
theme_override_font_sizes/font_size = 441
text = "asd"

[node name="player" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_sqeqn")
position = Vector2(0, -18.0288)
sprite_frames = SubResource("SpriteFrames_re207")
animation = &"jump_start"
autoplay = "idle"

[node name="PointLight2D" type="PointLight2D" parent="."]
modulate = Color(2, 2, 2, 1)
color = Color(1, 0.803922, 0.34902, 1)
energy = 0.66
texture = ExtResource("18_aflt6")
texture_scale = 0.68
height = 41.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_entered"]
[connection signal="timeout" from="Fireball_cd" to="." method="_on_fireball_cd_timeout"]
[connection signal="timeout" from="Bluefb_cd" to="." method="_on_bluefb_cd_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_timer_5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_timer_6_timeout"]
[connection signal="timeout" from="Jump" to="." method="_on_jump_timeout"]
[connection signal="animation_finished" from="player" to="." method="_on_player_animation_finished"]
